--- a/public/gallery.css
+++ b/public/gallery.css
@@ -111,10 +111,25 @@ h2 {
     display: none;
 }
 
+#window-content5 {
+    clear: both;
+    display: none;
+}
+
+#meme-preview {
+    max-width: 100%;
+    max-height: 400px;
+}
+
 #meme-url{
     margin-left: 5px;
 }
 
 #image-url{
     margin-left: 5px;
+}
+
+#image-to-edit {
+    max-height: 480px;
+    max-width: 100%;
 }
